--- a/home.css
+++ b/home.css
@@ -1,18 +1,25 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
+    padding:50px 100px 0 100px;
+    
 }
+center{
+    border: 3px solid black;
+  }
 
 header {
     text-align: center;
     margin-bottom: 20px;
 }
 
-h1 {
-    font-size: 24px;
+h1 {font-size: 24px;color: #fff;}
+.main{ 
+    border: 3px solid black;
+    padding: 10px;
+    margin: 50px;
+    background-color: #555;
 }
-
 section {
     margin-bottom: 40px;
 }
